--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,11 @@ stages:
 
             - task: codeBeamer@1
               inputs: 
-                test_xml_folder:
-                test_run_name:
-                test_run_id:
-                server_url:
+                test_xml_folder: 'example
+/test_results'
+                test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
+                test_run_id: '$(Build.BuildId)'
+                server_url: 'http://192.168.10.90:8083/cb/login.spr'
                 cb_user:
                 cb_password:
                 test_configuration_id:
