--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,14 @@ stages:
          - script:
             echo "Empty job."
 
-            - task: codeBeamer@1
-              inputs: 
-                test_xml_folder: 'example
-/test_results'
-                test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
-                test_run_id: '$(Build.BuildId)'
-                server_url: 'http://192.168.10.90:8083/cb/login.spr'
-                cb_user:
-                cb_password:
-                test_configuration_id:
-                test_case_tracker_id:
-                test_run_tracker_id:
+         - task: codeBeamer@1
+           inputs:
+            test_xml_folder: 'example/test_results'
+            test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
+            test_run_id: '$$(Build.BuildId)'
+            server_url: 'http://192.168.10.90:8083/cb/login.spr'
+            cb_user: '$(cb_user)'
+            cb_password: '$(cb_password)'
+            test_configuration_id: '14158'
+            test_case_tracker_id: '14156'
+            test_run_tracker_id: '14159'
