Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
            inputs:
             test_xml_folder: 'example/test_results'
             test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
-            test_run_id: '$$(Build.BuildId)'
+            test_run_id: '$(Build.BuildId)'
             server_url: 'http://192.168.10.90:8083/cb/login.spr'
             cb_user: '$(cb_user)'
             cb_password: '$(cb_password)'
