Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,6 @@ stages:
             server_url: 'https://training.codebeamer.com'
             cb_user: '$(cb_user)'
             cb_password: '$(cb_password)'
-            test_configuration_id: '2143'
-            test_case_tracker_id: '14156'
-            test_run_tracker_id: '14159'
+            test_configuration_id: '195839'
+            test_case_tracker_id: '2439408'
+            test_run_tracker_id: '195841'
