Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,13 @@ stages:
             echo "Empty job."
 
          - task: codeBeamer@1
-          inputs:
-            test_xml_folder: 'example/test_results'
-            test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
-            test_run_id: '$(Build.BuildId)'
-            server_url: 'https://training.codebeamer.com'
-            cb_user: '$(cb_user)'
-            cb_password: '$(cb_password)'
-            test_configuration_id: '195839'
-            test_case_tracker_id: '2439408'
+           inputs:
+              test_xml_folder: 'example/test_results'
+              test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
+              test_run_id: '$(Build.BuildId)'
+              server_url: 'https://training.codebeamer.com'
+              cb_user: '$(cb_user)'
+              cb_password: '$(cb_password)'
+              test_configuration_id: '195839'
+              test_case_tracker_id: '2439408'
+              test_run_tracker_id: '195841'
