--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,12 +23,12 @@ stages:
 
          - task: codeBeamer@1
            inputs:
-              test_xml_folder: 'example/test_results'
-              test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
-              test_run_id: '$(Build.BuildId)'
-              server_url: 'https://training.codebeamer.com'
-              cb_user: '$(cb_user)'
-              cb_password: '$(cb_password)'
-              test_configuration_id: '195838'
-              test_case_tracker_id: '2439408'
-              test_run_tracker_id: '195841'
+            test_xml_folder: 'example/test_results'
+            test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
+            test_run_id: '$(Build.BuildId)'
+            server_url: 'https://training.codebeamer.com'
+            cb_user: '$(cb_user)'
+            cb_password: '$(cb_password)'
+            test_configuration_id: '219027'
+            test_case_tracker_id: '2672854'
+            test_run_tracker_id: '2672857'
