Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,10 +22,10 @@ stages:
             echo "Empty job."
          - task: codeBeamer@1
            inputs:
-             test_xml_folder: 'example /test_results'
+             test_xml_folder: 'example/test_results'
              test_run_name: '$(Build.DefinitionName) $(Build.Reason)'
              test_run_id: '$(Build.BuildId)'
-             server_url: 'https://training.codebeamer.com'
+             server_url: 'https://training.codebeamer.com/login.spr'
              cb_user: '$(cb_user)'
              cb_password: '$(cb_password)'
              test_configuration_id: '219388'
